# glove-v

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.py
glove_v/: __init__.py  data.py  gensim_integration.py  propagate.py  variance.py  vector.py
glove_v/docs/: MOC_vs_DM.ipynb  tutorial.ipynb
glove_v/utils/: file.py
myword/: download_data.py  train_word2vec.py  utils.py
