[project]
name = "glove-v"
version = "0.1.0"
authors = [
    { name = "Andrea Vallebueno", email = "avaimar@law.stanford.edu" },
    { name = "Cassandra Handan-Nader", email = "XX@stanford.edu" },
]
description = "A Python package for downloading and using GloVe vectors and GloVe-V variances."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "diskcache",
    "fire",
    "gdown",
    "pandas>=2.2.3",
    "pdf2image",
    "pillow",
    "pytesseract",
    "seaborn>=0.13.2",
    "tqdm",
]

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "ruff",
    "snakeviz",
]

[project.urls]
homepage = "https://github.com/reglab/glove-v"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["glove_v"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["B", "E", "I", "N", "PTH", "COM", "C4", "UP"]
extend-ignore = ["COM812", "E712", "E501"]
