[project]
name = "glove-v"
version = "0.1.0"
authors = [
    { name = "Andrea Vallebueno", email = "avaimar@law.stanford.edu" },
    { name = "Cassandra Handan-Nader", email = "cassandra.handan-nader@nyu.edu" },
    { name = "Christopher D. Manning", email = "manning@cs.stanford.edu" },
    { name = "Daniel E. Ho", email = "deho@stanford.edu" },
]
description = "A Python package for downloading and using GloVe vectors and GloVe-V variances."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "seaborn>=0.13.2",
    "tqdm",
    "huggingface-hub==0.26.2",
    "gensim==4.3.3",
    "numpy==1.26.4",
    "scipy==1.13.1",
    "smart-open==7.0.4",
    "wrapt==1.16.0",
    "safetensors",
]

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "ruff",
    "snakeviz",
]

[project.urls]
homepage = "https://github.com/reglab/glove-v"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["glove_v"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["B", "E", "I", "PTH", "COM", "C4", "UP"]
extend-ignore = ["COM812", "E712", "E501"]
